# project-example

./: .gitignore  Cargo.toml  README.md
bitcoin_client/: Cargo.toml
bitcoin_client/src/: lib.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
config/: Cargo.toml
config/configuration/web3_json_rpc/: dev.yaml  local.yaml
config/src/: api.rs  environment.rs  lib.rs  utils.rs
core/src/: test.rs
core/src/server/: state.rs
core/src/server/web3/backend/: mod.rs
core/src/server/web3/backend/namespaces/: bridge.rs
core/src/server/web3/namespaces/: test.rs
dal/: .env.example  Cargo.toml  docker-compose.yml
dal/scripts/: init_main_db.sh  migrations.sh
dal/src/: lib.rs
dal/src/connection/: mod.rs
health_check/: Cargo.toml
health_check/src/: healthcheck.rs  lib.rs
logs/: Cargo.toml
logs/src/: telemetry.rs
project/: Cargo.toml
project/src/: lib.rs
project/src/server/: mod.rs
project/src/server/pubsub/: mod.rs  rpc.rs
project/src/server/web3/backend/: middleware.rs
project/src/server/web3/namespaces/: challenge.rs  pubsub.rs
rpc/: Cargo.toml
rpc/src/: error.rs
rpc/src/namespaces/: mod.rs  pubsub.rs  test.rs
types/: Cargo.toml
types/src/: error.rs  lib.rs  pubsub.rs
wallet/: Cargo.toml
wallet/src/: error.rs  lib.rs  provider.rs  utils.rs
{{project-name}}/: Cargo.toml
{{project-name}}/src/server/web3/: mod.rs
{{project-name}}/src/server/web3/backend/: metadata.rs
{{project-name}}/src/server/web3/backend/namespaces/: test.rs
