[workspace]
members = [
    "types",
    "common",
    "logs",
    "rpc",
    "dal",
    "config",
    "health_check",
    "core",
    "cli",
    "wallet",
    "bitcoin_client"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.38.0", features = ["time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4.3"
ctrlc = { version = "3.1", features = ["termination"] }
futures = "0.3"
anyhow = "1.0"
jsonrpsee = { version = "0.22.0", default-features = false, features = ["macros"] }
tracing = "0.1.26"
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm", features = ["rand-std", "serde", "bitcoinconsensus"] }
sqlx = { version = "0.7.2", default-features = false, features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "bigdecimal",
    "chrono",
    "json",
    "migrate",
    "ipnetwork"
] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "4.4.7", features = ["derive", "env", "string"] }
clap_complete = "4.4.4"
colored = "2.0.0"
strum = { version = "0.24", features = ["derive"] }
bincode = "1.3"
redis = "0.27.6"

[patch.crates-io]
base58check = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin_hashes = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin-internals = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin-io = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin-units = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}

ark-ff = { git = "https://github.com/fiamma-chain/algebra", branch = "bitvm" }
ark-ec = { git = "https://github.com/fiamma-chain/algebra", branch = "bitvm" }
ark-serialize = { git = "https://github.com/fiamma-chain/algebra", branch = "bitvm" }
ark-poly = { git = "https://github.com/fiamma-chain/algebra", branch = "bitvm" }