[package]
name = "bitcoin_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bitcoin = { workspace = true }
thiserror = { workspace = true }
bitcoincore-rpc = { git = "https://github.com/fiamma-chain/rust-bitcoincore-rpc", branch = "master", features = ["default"] }