[package]
name = "health_check"
version = "0.1.0"
edition = "2021"

[dependencies]
logs = { path = "../logs" }
async-trait = "0.1"
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.6.19", default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
tracing = { workspace = true }

[dev-dependencies]
assert_matches = "1.5.0"
tokio = { version = "1.35.0", features = ["macros", "rt"] }
