[package]
name = "logs"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.26", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [
    "registry",
    "env-filter",
    "chrono",
] }
tracing-log = "0.1"
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
