[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
logs = { path = "../logs" }
config = { path = "../config" }
strum = { workspace = true }
num_enum = "0.6"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.1"
bitcoin = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
alloy = { version = "0.5.4", features = ["full"] }
